# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
Resources/: BishopMagics.txt  RookMagics.txt  Seed.txt
common/: Magic.cpp
data/: BishopAttacks.cpp  BishopMagics.cpp  Blockers.cpp  KingAttacks.cpp  KnightAttacks.cpp  RookAttacks.cpp  RookMagics.cpp
include/: Attacks.h  BoardConstants.h  GameState.h  Helpers.h  Magic.h  MagicBB.h  Move.h  MoveGen.h  Precompute.h  attackTables.h
src/: GameState.cpp  GameState.h  Helpers.cpp  Magic.cpp  MagicBB.cpp  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  PieceType.h  Rays.h  main  main.cpp
tools/: generateHardCodedMagics.py
tools/GenAttackTables/: GenAttacks.h  GenBishopAttacks.cpp  GenNonSliderAttacks.cpp  GenNonSliderAttacks.h  GenRookAttacks.cpp  MagicBB.cpp  MagicBB.h  main.cpp
